[ADD] WIP missing model

--- a/ceppp_patient_partenaire/views/menu.xml
+++ b/ceppp_patient_partenaire/views/menu.xml
@@ -16,6 +16,63 @@
 
     <!--Child menu-->
 
+    <menuitem
+            id="competence"
+            name="Competence"
+            action="ceppp_competence_competence_action_window"
+            sequence="1"
+            parent="menu"
+    />
+
+    <menuitem
+            id="formation"
+            name="Formation"
+            action="ceppp_formation_formation_action_window"
+            sequence="2"
+            parent="menu"
+    />
+
+    <menuitem
+            id="implication"
+            name="Implication"
+            action="ceppp_implication_implication_action_window"
+            sequence="3"
+            parent="menu"
+    />
+
+    <menuitem id="langue" name="Langue" action="ceppp_langue_langue_action_window" sequence="4" parent="menu"/>
+
+    <menuitem
+            id="maladie_proche_aidant"
+            name="Maladie proche aidant"
+            action="ceppp_maladie_proche_aidant_maladie_proche_aidant_action_window"
+            sequence="5"
+            parent="menu"
+    />
+
+    <menuitem
+            id="maladie_soi_meme"
+            name="Maladie soi meme"
+            action="ceppp_maladie_soi_meme_maladie_soi_meme_action_window"
+            sequence="6"
+            parent="menu"
+    />
+
+    <menuitem
+            id="mode_communication_privilegie"
+            name="Mode communication privilegie"
+            action="ceppp_mode_communication_privilegie_mode_communication_privilegie_action_window"
+            sequence="7"
+            parent="menu"
+    />
+
+    <menuitem
+            id="occupation"
+            name="Occupation"
+            action="ceppp_occupation_occupation_action_window"
+            sequence="8"
+            parent="menu"
+    />
     <menuitem id="patient" name="Patient" action="ceppp_patient_patient_action_window" sequence="1" parent="menu"/>
 
     <record model="ir.ui.menu" id="contacts.menu_contacts">
