--- a/ceppp_patient_partenaire/views/menu.xml
+++ b/ceppp_patient_partenaire/views/menu.xml
@@ -78,10 +78,10 @@
             parent="menu_configuration"
     />
 
-    <record model="ir.ui.menu" id="contacts.menu_contacts">
-        <!-- Replace all group in contacts.menu_contacts -->
-        <field name="groups_id"
-               eval="[(6,0,[ref('base.group_partner_manager'), ref('group_ceppp_patient_partenaire_manager')])]"/>
-    </record>
+    <!--    <record model="ir.ui.menu" id="contacts.menu_contacts">-->
+    <!--        &lt;!&ndash; Replace all group in contacts.menu_contacts &ndash;&gt;-->
+    <!--        <field name="groups_id"-->
+    <!--               eval="[(6,0,[ref('base.group_partner_manager'), ref('group_ceppp_patient_partenaire_manager')])]"/>-->
+    <!--    </record>-->
 
 </odoo>
