--- a/ceppp_patient_partenaire/views/ceppp_recruteur.xml
+++ b/ceppp_patient_partenaire/views/ceppp_recruteur.xml
@@ -7,10 +7,87 @@
         <field name="arch" type="xml">
             <form string="Titre">
                 <sheet>
+                    <div class="oe_button_box" name="button_box">
+                        <button class="oe_stat_button" icon="fa-archive" name="toggle_active" type="object">
+                            <field name="active" widget="boolean_button"/>
+                        </button>
+                    </div>
+                    <field name="image" widget='image' class="oe_avatar"
+                           options='{"preview_image": "image_medium", "size": [90, 90]}'/>
+                    <div class="oe_title">
+                        <h1>
+                            <field name="name" default_focus="1"/>
+                        </h1>
+                    </div>
                     <group>
-                        <field name="name" />
+                        <field name="uuid" readonly="1" attrs="{'invisible':[('uuid','=',False)]}"/>
+                        <field name="patient_partner_id"/>
+                        <field name="recruteur_partner_id"/>
+                        <field name="recruteur_user_id"/>
+                        <field name="centre_recruteur"/>
                     </group>
+                    <notebook>
+                        <page name='infos' string="Infos">
+                            <group>
+                                <group name="description" string="Description">
+                                    <field name="date_naissance"/>
+                                    <field name="sexe"/>
+                                    <field name="genre"/>
+                                    <field name="genre_autre" attrs="{'invisible':[('genre','!=','autre')]}"/>
+                                    <field name="heritage_culturel"/>
+                                    <field name="langue_parle_ecrit"/>
+                                    <field name="langue_parle_ecrit_autre"
+                                           attrs="{'invisible':[('langue_parle_ecrit','!=','autre')]}"/>
+
+                                </group>
+                                <group name="preference" string="Préférence">
+                                    <field name="mode_communication_privilegie"/>
+                                    <field name="patient_actif"/>
+                                </group>
+                            </group>
+                            <group>
+                                <group name="Occupation" string="Autre">
+                                    <field name="occupation"/>
+                                    <field name="occupation_autre" attrs="{'invisible':[('occupation','!=','autre')]}"/>
+                                </group>
+                            </group>
+                        </page>
+                        <page name='consentements' string="Consentements">
+                            <group>
+                            </group>
+                        </page>
+                        <page name='competences' string="Compétences">
+                            <group>
+                                <field name="competence_patient"/>
+                            </group>
+                        </page>
+                        <page name='commentaires' string="Commentaires">
+                            <field name="commentaires"/>
+                        </page>
+                        <page name='disponibilite' string="Disponibilité">
+                            <group>
+                            </group>
+                        </page>
+                        <page name='savoir_experientiel' string="Savoirs expérientiels">
+                            <group>
+                            </group>
+                        </page>
+                        <page name='formation' string="Formations">
+                            <group>
+                                <field name="formation_professionnelle"/>
+                            </group>
+                        </page>
+                        <page name='implication' string="Implications">
+                            <group>
+                            </group>
+                        </page>
+                    </notebook>
                 </sheet>
+                <div class="oe_chatter">
+                    <field name="message_follower_ids" widget="mail_followers"/>
+                    <field name="activity_ids" widget="mail_activity"/>
+                    <field name="message_ids" widget="mail_thread"/>
+                </div>
             </form>
         </field>
     </record>
@@ -20,7 +97,7 @@
         <field name="model">ceppp.recruteur</field>
         <field name="arch" type="xml">
             <graph string="Ceppp recruteur">
-                <field name="name" type="row" />
+                <field name="name" type="row"/>
             </graph>
         </field>
     </record>
@@ -30,7 +107,7 @@
         <field name="model">ceppp.recruteur</field>
         <field name="arch" type="xml">
             <kanban class="o_kanban_mobile">
-                <field name="name" />
+                <field name="name"/>
                 <templates>
                     <t t-name="kanban-box">
                         <div t-attf-class="oe_kanban_global_click">
@@ -38,7 +115,7 @@
                                 <ul>
                                     <li class="mb4">
                                         <strong>
-                                            <field name="name" />
+                                            <field name="name"/>
                                         </strong>
                                     </li>
                                 </ul>
@@ -55,7 +132,7 @@
         <field name="model">ceppp.recruteur</field>
         <field name="arch" type="xml">
             <pivot string="Ceppp recruteur">
-                <field name="name" type="row" />
+                <field name="name" type="row"/>
             </pivot>
         </field>
     </record>
@@ -65,7 +142,10 @@
         <field name="model">ceppp.recruteur</field>
         <field name="arch" type="xml">
             <search string="Ceppp recruteur">
-                <filter domain="[('name','!=',False)]" name="name" string="Name" />
+                <filter domain="[('name','!=',False)]" name="name" string="Name"/>
+                <separator/>
+                <filter string="Mes patients" name="mes_patients" domain="[('recruteur_user_id','in',[uid])]"
+                        help="Mes patients de mon affiliation"/>
             </search>
         </field>
     </record>
@@ -75,16 +155,24 @@
         <field name="model">ceppp.recruteur</field>
         <field name="arch" type="xml">
             <tree>
-                <field name="name" />
+                <field name="name"/>
             </tree>
         </field>
     </record>
 
     <act_window
-        id="ceppp_recruteur_recruteur_action_window"
-        name="Recruteur"
-        res_model="ceppp.recruteur"
-        view_mode="kanban,tree,pivot,graph,form"
+            id="ceppp_patient_my_patient_action_window"
+            name="Mes patients"
+            res_model="ceppp.recruteur"
+            context="{'search_default_mes_patients': 1}"
+            view_mode="kanban,tree,pivot,graph,form"
+    />
+
+    <act_window
+            id="ceppp_patient_les_patient_affiliation_action_window"
+            name="Les patients de mon centre de recrutement"
+            res_model="ceppp.recruteur"
+            view_mode="kanban,tree,pivot,graph,form"
     />
 
 </odoo>
